# multitrack-audio-editor

./: Cargo.toml  README.md  design_doc.md
src/: main.rs
src/ui/: block_style.css
src/ui/components/: app.rs  effects.rs  mod.rs  status.rs  toolbar.rs  track.rs  track_view.rs  transport.rs
