[package]
name = "multitrack-audio-editor"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuix = {git = "https://github.com/geom3trik/tuix", rev = "196e0931902bcc112520cbe73f56101d15e0cdbe"}
# tuix = {path = "../tuix"}